
SVN
---

XML:   Resolved issue CASTOR-1512 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Improved documentation of source generator Ant task.
       Details: http://jira.codehaus.org/browse/CASTOR-1512
       (Werner - 20060829)

XML:   Resolved issue CASTOR-1501 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with ignorance of java-type elements in binding file (for complex elements).
       Details: http://jira.codehaus.org/browse/CASTOR-1501
       (Werner - 20060824)

XML:   Resolved issue CASTOR-1508 using contribution from Phil Webb [phil.webb@card.co.uk]
       Various speed improvementzs related to inheritance search.
       Details: http://jira.codehaus.org/browse/CASTOR-1508
       (Werner - 20060824)

XML:   Resolved issue CASTOR-1489 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for abstract <complexType> definitions.
       Details: http://jira.codehaus.org/browse/CASTOR-1489
       (Werner - 20060824)

JDO:   Resolved issue CASTOR-1471 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for Progress.
       Details: http://jira.codehaus.org/browse/CASTOR-1471
       (Werner - 20060823)

XML:   Resolved issue CASTOR-1509 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Refactored Marshaller to allow instantiation through default constructor (setting 
       Writer through setWriter()).
       Details: http://jira.codehaus.org/browse/CASTOR-1509
       (Werner - 20060823)

JDO:   Resolved issue CASTOR-1506 using contribution from Emir Causevic [emircaus@bih.net.ba]
       Restructured mapping syntax for named queries.
       Details: http://jira.codehaus.org/browse/CASTOR-1506
       (Werner - 20060823)

XML:   Resolved issue CASTOR-1493 using contribution from Simeon de Dios [sdedios@lehman.com]